--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "\"app/app.js\"",
   "scripts": {
     "test": "mocha",
-    "start": "nodemon app/app.js"
+    "start": "node app/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,8 +16,11 @@
     "fetch": "^1.1.0",
     "install": "^0.8.2",
     "mongoose": "^4.7.1",
-    "npm": "^4.0.3",
-    "reload": "^1.1.0"
+    "npm": "^4.0.3"
+  },
+  "engines": {
+    "node": "7.2.0",
+    "npm": "3.10.9"
   },
   "devDependencies": {
     "chai": "^3.5.0",
