book suggestion app

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "fetch": "^1.1.0",
     "install": "^0.8.2",
     "mongoose": "^4.7.1",
-    "npm": "^4.0.3"
+    "npm": "^4.0.3",
+    "unirest": "^0.5.1"
   },
   "engines": {
     "node": "7.2.0",
